Add SEO tag to index.html for improved search engine optimization

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="refresh" content="0;url=/2025-02-18-filderstadt-legends.html">
     <meta name="author" content="Jose thomas">
     <title>Filderstadt – Stadt der Legenden</title>
+    {% seo %}
     <!-- ...existing head code... -->
   </head>
   <body>
