Update baseurl in config and use Liquid variable for URL redirection in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=/2025-02-18-filderstadt-legends.html">
+    <!-- Use Liquid variable to build the URL -->
+    <meta http-equiv="refresh" content="0;url={{ site.baseurl }}/2025-02-18-filderstadt-legends.html">
     <meta name="author" content="Jose thomas">
     <title>Filderstadt – Stadt der Legenden</title>
     {% seo %}
@@ -10,6 +11,6 @@
   </head>
   <body>
     <!-- In case redirection fails -->
-    <p>Redirecting... If you are not redirected automatically, <a href="/2025-02-18-filderstadt-legends.html">click here</a>.</p>
+    <p>Redirecting... If you are not redirected automatically, <a href="{{ site.baseurl }}/2025-02-18-filderstadt-legends.html">click here</a>.</p>
   </body>
 </html>
