Update stylesheet reference in index.html to use SCSS file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Filderstadt – Stadt der Legenden</title>
     {% seo %}
     <!-- Update stylesheet reference -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.scss">
     <!-- ...existing head code... -->
   </head>
   <body>
