Update title in index.html and adjust meta refresh URL

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8">
+    <title>Filderstadt Site</title>
     <!-- Use Liquid variable to build the URL -->
     <meta http-equiv="refresh" content="0;url={{ site.baseurl }}/2025-02-18-filderstadt-legends.html">
     <meta name="author" content="Jose thomas">
-    <title>Filderstadt – Stadt der Legenden</title>
     {% seo %}
     <!-- Update stylesheet reference -->
     <link rel="stylesheet" href="assets/css/style.scss">
