--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Filderstadt Site</title>
-    <!-- Use Liquid variable to build the URL -->
-    <meta http-equiv="refresh" content="0;url={{ site.baseurl }}/2025-02-18-filderstadt-legends.html">
+    <!-- Removed meta refresh redirection -->
     <meta name="author" content="Jose thomas">
     {% seo %}
-    <!-- Update stylesheet reference -->
     <link rel="stylesheet" href="assets/css/style.scss">
     <!-- ...existing head code... -->
   </head>
   <body>
-    <!-- In case redirection fails -->
-    <p>Redirecting... If you are not redirected automatically, <a href="{{ site.baseurl }}/2025-02-18-filderstadt-legends.html">click here</a>.</p>
-    <!-- Global error handling -->
+    <!-- ...existing body code (consider adding a posts listing here)... -->
     <script>
       window.onerror = function(message, source, lineno, colno, error) {
         console.error('Error caught:', { message, source, lineno, colno, error });
-        // Optionally: display a fallback message to the user or integrate with an error logging service.
-        return true; // Prevent the firing of the default event handler.
+        return true;
       };
     </script>
   </body>
