Fix stylesheet reference path in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Removed meta refresh redirection -->
     <meta name="author" content="Jose thomas">
     {% seo %}
-    <link rel="stylesheet" href="assets/css/style.scss">
+    <link rel="stylesheet" href="./assets/css/style.scss">
     <!-- ...existing head code... -->
   </head>
   <body>
