Add meta refresh for automatic redirection to Filderstadt Legends page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Home
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta http-equiv="refresh" content="0; url=/2025/02/18/filderstadt-legends.html" />
     <meta charset="UTF-8">
     <title>Filderstadt Site</title>
     <!-- Removed meta refresh redirection -->
