--- a/_posts/post.html
+++ b/_posts/post.html
@@ -36,13 +36,13 @@ layout: default
               <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
             </svg>
           </a>
-          <a href="#" onclick="window.print();return false;" class="share-button">
+          <button type="button" class="share-button print-button">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <polyline points="6 9 6 2 18 2 18 9"></polyline>
               <path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"></path>
               <rect x="6" y="14" width="12" height="8"></rect>
             </svg>
-          </a>
+          </button>
         </div>
       </div>
     </div>
@@ -62,3 +62,5 @@ layout: default
     </div>
   </div>
 </div>
+
+<script src="{{ '/assets/js/print.js' | relative_url }}"></script>
