Refactor homepage layout: remove index.html, update index.md for post listing, and add MathJax support in default layout

--- a/home.html
+++ b/home.html
@@ -43,8 +43,8 @@
         </div>
         <div class="footer-column">
           <h3>Contact</h3>
-          <p>Email: contact@filderstadtchroniken.de</p>
-          <p>Phone: +49 123 456789</p>
+          <p>Email: josethomas42@gmail.com</p>
+          <p>Phone: +91 8921384084</p>
         </div>
       </div>
       <div class="footer-bottom">
