--- a/home.html
+++ b/home.html
@@ -1,63 +1,5 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: 'de' }}">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{{ page.description | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-  <meta name="author" content="{{ page.author | default: 'Jose Thomas' }}">
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-  {% seo %}
-</head>
-<body>
-  <header>
-    <div class="container site-header">
-      <a href="{{ site.baseurl }}/" class="site-title">{{ site.title }}</a>
-      <nav class="site-nav">
-        <a href="{{ site.baseurl }}/regions">REGIONS</a>
-        <a href="{{ site.baseurl }}/services">SERVICES</a>
-        <a href="{{ site.baseurl }}/insights">INSIGHTS</a>
-        <a href="{{ site.baseurl }}/about">ABOUT US</a>
-      </nav>
-    </div>
-  </header>
-
-  {{ content }}
-
-  <footer class="site-footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-column">
-          <h3>{{ site.title }}</h3>
-          <p>{{ site.description }}</p>
-        </div>
-        <div class="footer-column">
-          <h3>Navigation</h3>
-          <ul>
-            <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li><a href="{{ site.baseurl }}/regions">Regions</a></li>
-            <li><a href="{{ site.baseurl }}/services">Services</a></li>
-            <li><a href="{{ site.baseurl }}/insights">Insights</a></li>
-            <li><a href="{{ site.baseurl }}/about">About Us</a></li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h3>Contact</h3>
-          <p>Email: josethomas42@gmail.com</p>
-          <p>Phone: +91 8921384084</p>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.</p>
-      </div>
-    </div>
-  </footer>
-
-  <script>
-    window.onerror = function(message, source, lineno, colno, error) {
-      console.error('Error caught:', { message, source, lineno, colno, error });
-      return true;
-    };
-  </script>
-</body>
-</html>
+---
+layout: default
+title: Home
+---
+{{ content }}
